# aitextaroo-clients

./: .gitignore  AGENT_SETUP.md  LICENSE  README.md  pyproject.toml
aitextaroo/: __init__.py  agents.py  bridge.py  cli.py  client.py  commands.py  conversation.py  formatting.py  models.py  setup.py
examples/: echo_bot.py  simple_listen.py
tests/: test_agents.py  test_bridge.py  test_client.py  test_commands.py  test_conversation.py  test_formatting.py  test_models.py
