[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aitextaroo"
version = "0.1.2"
description = "Client library for AI Text-a-roo — give any AI agent a phone number"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "AI Text-a-roo", email = "hello@aitextaroo.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["sms", "ai", "agent", "chatbot", "text-messaging"]

dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
bridge = [
    "pyyaml>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

[project.scripts]
aitextaroo-setup = "aitextaroo.setup:main"
aitextaroo-bridge = "aitextaroo.cli:main"

[project.urls]
Homepage = "https://aitextaroo.com"
Documentation = "https://github.com/rwfresh/aitextaroo-clients"
Repository = "https://github.com/rwfresh/aitextaroo-clients"
Issues = "https://github.com/rwfresh/aitextaroo-clients/issues"

[tool.setuptools.packages.find]
include = ["aitextaroo*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "SIM", "TCH"]
ignore = ["S101"]  # Allow assert in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
